miscellaneous changes, sloppy commit messages

--- a/views/index.jade
+++ b/views/index.jade
@@ -77,7 +77,8 @@ html
 							td 3% of ticket sale price per ticket
 			section
 				h2 Creators
-				p Christopher and Thomas are Computer Scientists at Emmanuel College. Both love pretty things, hate wasted time and can’t get enough JavaScript.
+				.row
+				p Christopher and Tom are Computer Scientists at Emmanuel College. Both love pretty things, hate wasted time and can’t get enough JavaScript.
 				p Want to know more? Drop us an email at hello@mabelticketing.co.uk
 
 
