--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -6,22 +6,118 @@
   'partials/fonts',
   'partials/variables';
 
+@import 'partials/mixins';
+
 
 
 body {
-  font-family: $main-font;
+  font-family: $font--main;
 }
 
 
 
 h1, h2, h3, h4 {
-  font-family: $heading-font;
+  font-family: $font--headings;
+}
+
+
+section, footer {
+  width: 100%;
+}
+
+footer {
+  background-color: $col--dark-grey;
+  color: $col--light-grey;
+  height: 80px;
+  p {
+    text-align: center;
+    margin: 0;
+    font-size: 1.2em;
+  }
+}
+
+.titlebox {
+  @include center-content;
+}
+
+
+.mabel-logo {
+  width: 225px;
+  height: 225px;
+  border: 2px solid $col--black;
+  border-radius: 50%;
+  text-align: center;
+  display: table-cell;
+  vertical-align: middle;
+  margin: auto;
+  margin-top: 500px; // TODO: remove
+
+  h1 {
+    margin: 0;
+    font-size: 4em;
+    color: $col--black;
+    text-shadow: 2px 2px 0px $col--mabel-orange;
+  }
+}
+
+.center-fix {
+  margin: auto;
+  display: inline-block;
+}
+
+
+.tagline {
+  font-size: 19px;
+  text-align: center;
+  color: $col--dark-grey;
+  margin-top: 15px;
+  margin-bottom: 30px;
+}
+
+.thumb {
+  text-align: center;
+
+  img {
+    border-radius: 50%;
+    width: 150px;
+    height: 150px;
+  }
+}
+
+.big-text {
+  font-size: 2em;
+  text-align: center;
 }
 
 
 
 
 
+#titlebox {}
+
+#intro {
+  background-color: $col--very-light-grey;
+}
+
+
+
+
+
+a.ghost-button {
+  padding: 4px;
+  border: 2px solid black;
+  height:36px;
+  width: 160px;
+  display: inline-block;
+  border-radius: 18px;
+  font-family: $font--headings;
+  background-color: white;
+  color: black;
+  text-decoration: none;
+  font-size: 18px;
+  margin-left: 5px;
+  margin-right: 5px;
+}
 
 
 
