--- a/assets/scss/partials/_variables.scss
+++ b/assets/scss/partials/_variables.scss
@@ -1,5 +1,12 @@
 
 
 
-$main-font: 'Open Sans', sans-serif;
-$heading-font: 'Montserrat', sans-serif;
+$font--main: 'Open Sans', sans-serif;
+$font--headings: 'Montserrat', sans-serif;
+
+
+$col--mabel-orange: rgba(255, 102, 0, 1);
+$col--black: rgba(0, 0, 0, 1);
+$col--dark-grey: rgba(80,80,80,1);
+$col--light-grey: rgba(200,200,200,1);
+$col--very-light-grey: #f4f4f4;
