--- a/views/index.jade
+++ b/views/index.jade
@@ -1,86 +1,106 @@
 html
 	head
-		title Mabel Ticketing
+		title Mabel - A May Ball ticketing system
+		link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css")
 		link(rel="stylesheet", type="text/css", href="/assets/css/main.css")
 
 
 	body
-		.container.content
 			a(href="https://github.com/mabelticketing/mabel")
 				img(style="position: absolute; top: 0; right: 0; border: 0;",
 					src="https://camo.githubusercontent.com/a6677b08c955af8400f44c6298f40e7d19cc5b2d/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677261795f3664366436642e706e67",
 					alt="Find me on GitHub",
 					data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png")
+			section#titlebox
+				.container(style="text-align: center;height: 100%;")
+					.titlebox
+						.center-fix
+							.mabel-logo
+								h1 Mabel
+						p.tagline A May Ball ticketing system
+						p #[b Mabel] is a modern ticketing system designed especially for your May Ball, June Event or Garden Party. It was built from the ground up to be easy to use whilst giving your committee the power to quickly do everything they need.
+						a.ghost-button #[span.fa.fa-code] source
+						a.ghost-button #[span.fa.fa-angle-down] read more
+			section#intro
+				.container
+					h2 But I already have a ticketing system!
+					p Almost every committee has their own legacy system, passed on from one year to the next long after the original author has left. Nearly all of them have bugs and quirks, making the ticket booking experience error-prone or unreliable. In some cases, ticketing system bugs may actually be dangerous, as malicious users circumvent security systems.
+					p Even if you’ve never had a problem with your ticketing system before, very few committees have the ability to update it in-house when new technologies appear. Can your ticketing system receive immediate online payments? Could it tie into electronic wristbands or a custom app for your event? Why waste your committee’s time by integrating these features when somebody else has already done it?
 			section
-				h1 Mabel
-				p A May Ball ticketing system.
-				p #[b Mabel] is a modern ticketing system designed especially for your May Ball, June Event or Garden Party. It was built from the ground up to be easy to use whilst giving your committee the power to quickly do everything they need.
-			section
-				h2 But I already have a ticketing system!
-				p Almost every committee has their own legacy system, passed on from one year to the next long after the original author has left. Nearly all of them have bugs and quirks, making the ticket booking experience error-prone or unreliable. In some cases, ticketing system bugs may actually be dangerous, as malicious users circumvent security systems.
-				p Even if you’ve never had a problem with your ticketing system before, very few committees have the ability to update it in-house when new technologies appear. Can your ticketing system receive immediate online payments? Could it tie into electronic wristbands or a custom app for your event? Why waste your committee’s time by integrating these features when somebody else has already done it?
-			section
-				h2 What can Mabel do?
-				.row
-					.col-sm-3
-						h3 Intelligent Authentication
-						p Mabel can use any authentication system you like. Raven support is built-in, and it is easy to extend Mabel to handle alumni or your college's own login system.
-					.col-sm-3
-						h3 Customisable ticket types
-						p Queue-jump? Dining? Punting? Early bird? Our admin panel allows you to create as many ticket types as you can think of.
-					.col-sm-3
-						h3 Changeable ticketing permissions
-						p Only want students from your college purchasing dining tickets? We have a flexible system for you to choose who can buy which tickets.
-				.row
-					.col-sm-3
-						h3 Separate ticket release dates
-						p If you want to release tickets to your college before the rest of the university, you can!
-					.col-sm-3
-						h3 Make Mabel yours
-						p It’s easy to style Mabel to look exactly the way you want to, so your event’s theme can shine through when your guests buy their tickets.
-					.col-sm-3
-						h3 Rock-solid speed
-						p Mabel will handle hundreds of simultaneous users without breaking a sweat. So you can rest easy on launch night knowing nothing can go wrong.
-					.col-sm-3
-						h3 On the night
-						p No one likes queueing, which is why we’ve integrated a super fast ticket scanning system. Your guests will be through the door in record time.
+				.container
+					h2 What can Mabel do?
+					.row
+						.col-sm-3
+							h3 Intelligent Authentication
+							p Mabel can use any authentication system you like. Raven support is built-in, and it is easy to extend Mabel to handle alumni or your college's own login system.
+						.col-sm-3
+							h3 Customisable ticket types
+							p Queue-jump? Dining? Punting? Early bird? Our admin panel allows you to create as many ticket types as you can think of.
+						.col-sm-3
+							h3 Changeable ticketing permissions
+							p Only want students from your college purchasing dining tickets? We have a flexible system for you to choose who can buy which tickets.
+					.row
+						.col-sm-3
+							h3 Separate ticket release dates
+							p If you want to release tickets to your college before the rest of the university, you can!
+						.col-sm-3
+							h3 Make Mabel yours
+							p It’s easy to style Mabel to look exactly the way you want to, so your event’s theme can shine through when your guests buy their tickets.
+						.col-sm-3
+							h3 Rock-solid speed
+							p Mabel will handle hundreds of simultaneous users without breaking a sweat. So you can rest easy on launch night knowing nothing can go wrong.
+						.col-sm-3
+							h3 On the night
+							p No one likes queueing, which is why we’ve integrated a super fast ticket scanning system. Your guests will be through the door in record time.
 
 			section
-			h2 Using Mabel
-			p There are three ways to use Mabel. You can obtain the source code for free from our #[a(href="#") GitHub repository] - but then you’re on your own. If your committee lacks the technical capacity to do that, we can do it for you instead.
-				table.table
-					thead
-						tr
-							th
-							th Community
-							th Basic
-							th Premium
-					tbody
-						tr
-							th Details
-							td
-								p Mabel is released under the open-source GPL license. That means you can use the code for free, as long as you share any modifications you make back with us.
-								p If you’re not making modifications, please consider making a donation to support the project’s ongoing development. [link to easy to use donation giver page - suggested donation should be listed on that page]
-							td
-									p We can set up the system for you, and show you how to use it.[say some more about support]
-							td
-									p We will set up the system and make custom modifications for you as required. This also includes the ability to receive online payments, so your committee can receive their money a few days after launch night.
-						tr
-							th Support
-							td cross None
-							td tick some
-							td ticktick Loads
-						tr
-							th Price
-							td Free
-							td One-off fee of £500
-							td 3% of ticket sale price per ticket
+				.container
+					h2 Using Mabel
+					p There are three ways to use Mabel. You can obtain the source code for free from our #[a(href="#") GitHub repository] - but then you’re on your own. If your committee lacks the technical capacity to do that, we can do it for you instead.
+						table.table
+							thead
+								tr
+									th
+									th Community
+									th Basic
+									th Premium
+							tbody
+								tr
+									th Details
+									td
+										p Mabel is released under the open-source GPL license. That means you can use the code for free, as long as you share any modifications you make back with us.
+										p If you’re not making modifications, please consider making a donation to support the project’s ongoing development. [link to easy to use donation giver page - suggested donation should be listed on that page]
+									td
+											p We can set up the system for you, and show you how to use it.[say some more about support]
+									td
+											p We will set up the system and make custom modifications for you as required. This also includes the ability to receive online payments, so your committee can receive their money a few days after launch night.
+								tr
+									th Support
+									td cross None
+									td tick some
+									td ticktick Loads
+								tr
+									th Price
+									td Free
+									td One-off fee of £500
+									td 3% of ticket sale price per ticket
 			section
-				h2 Creators
-				.row
-				p Christopher and Tom are Computer Scientists at Emmanuel College. Both love pretty things, hate wasted time and can’t get enough JavaScript.
-				p Want to know more? Drop us an email at hello@mabelticketing.co.uk
+				.container
+					h2 Creators
+					.row
+						.col-sm-12.col-md-3.col-md-offset-3.thumb
+							img(src="/assets/img/chris.jpg")
 
+
+						.col-sm-12.col-md-3.thumb
+							img(src="/assets/img/tom.jpg")
+					.row
+						.col-sm-12.col-md-6.col-md-offset-3.tagline
+							p Christopher and Tom are Computer Scientists at Emmanuel College. Both love pretty things, hate wasted time and can’t get enough JavaScript.
+			section
+				.container.big-text
+					p Want to know more? Drop us an email at #[a(href="mailto:hello@mabelticketing.co.uk") hello@mabelticketing.co.uk]
 
 			footer
-				&copy; Copyright Mabel Ticketing 2015.
+				.container
+					p &copy; Copyright Mabel Ticketing 2015.
