--- a/assets/scss/partials/_variables.scss
+++ b/assets/scss/partials/_variables.scss
@@ -10,3 +10,6 @@ $col--black: rgba(0, 0, 0, 1);
 $col--dark-grey: rgba(80,80,80,1);
 $col--light-grey: rgba(200,200,200,1);
 $col--very-light-grey: #f4f4f4;
+
+$font-weight--bold: 700;
+$font-weight--normal: 400;
