--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,235 +1,15 @@
-
+/**
+ * main.scss
+ *
+ * bootstrap the scss
+ */
 
 @import 'vendor/bootstrap';
 
-@import
-  'partials/fonts',
-  'partials/variables';
-
+@import 'partials/variables';
 @import 'partials/mixins';
-
-
-
-body {
-  font-family: $font--main;
-}
-
-
-
-h1, h2, h3, h4 {
-  font-family: $font--headings;
-}
-
-h2 {
-  margin-top: 0;
-}
-
-section, footer {
-  width: 100%;
-}
-
-footer {
-  background-color: $col--dark-grey;
-  color: $col--light-grey;
-  height: 40px;
-  p {
-    text-align: center;
-    margin: 17px;
-    font-size: 12px;
-  }
-  a, a:hover, a:active {
-    color: $col--light-grey;
-    font-weight: $font-weight--normal;
-  }
-}
-
-.titlebox {
-  @include center-content;
-}
-
-
-.mabel-logo {
-  width: 225px;
-  height: 225px;
-  border: 2px solid $col--black;
-  border-radius: 50%;
-  text-align: center;
-  display: table-cell;
-  vertical-align: middle;
-  margin: auto;
-  margin-top: 500px; // TODO: remove
-
-  h1 {
-    margin: 0;
-    font-size: 4em;
-    color: $col--black;
-    text-shadow: 2px 2px 0px $col--mabel-orange;
-  }
-}
-
-.center-fix {
-  margin: auto;
-  display: inline-block;
-}
-
-
-.tagline {
-  font-size: 19px;
-  text-align: center;
-  color: $col--dark-grey;
-  margin-top: 15px;
-  margin-bottom: 30px;
-}
-
-.thumb {
-  text-align: center;
-
-  img {
-    border-radius: 50%;
-    width: 150px;
-    height: 150px;
-  }
-}
-
-
-// TODO: probably unnecessary
-@mixin slide-padding {
-  padding-top: 80px;
-  padding-bottom: 80px;
-}
-#more {
-  font-size: 2em;
-  text-align: center;
-  @include slide-padding;
-  background-color: $col--mabel-orange;
-  p {
-    font-family: $font--headings;
-    color: $col--black;
-    text-transform: uppercase;
-    font-weight: bold;
-  }
-}
-
-a.mail-link {
-  text-decoration: underline;
-  color: $col--black !important;
-}
-
-
-
-
-#titlebox {}
-
-#intro {
-  background-color: $col--very-light-grey;
-  @include slide-padding;
-}
-
-#what {
-  @include slide-padding;
-}
-
-#using {
-  @include slide-padding;
-  background-color: $col--very-light-grey;
-}
-
-
-
-
-
-.whatbox {
-  text-align: center;
-  span {
-    font-size: 2.5em;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    display: inline-block;
-  }
-  h4 {
-  }
-}
-
-
-
-a.ghost-button {
-  padding: 4px;
-  border: 2px solid black;
-  height:36px;
-  width: 160px;
-  display: inline-block;
-  border-radius: 18px;
-  font-family: $font--headings;
-  background-color: white;
-  color: black;
-  text-decoration: none;
-  font-size: 18px;
-  margin-left: 5px;
-  margin-right: 5px;
-}
-
-
-
-
-
-
-
-
-
-
-
-a {
-  text-decoration: none;
-  font-weight: $font-weight--bold;
-  color: $col--mabel-orange;
-}
-a:hover, a:active {
-  color: $col--mabel-orange;
-  text-decoration: underline;
-}
-
-
-
-
-
-
-
-
-
-
-
-// .content {
-//   max-width: 800px;
-// }
-/**
- * _main.scss
- *
- * Assemble partials together. Will be output
- * to main.css
- *
- */
-
-// import bootstrap
-// @import
-//   'vendor/bootstrap';
-
-// import variables so they can be accessed by partials.
-//  -> important: lots of bootstrap variables with obvious names e.g. $text-color so be careful with naming
-// @import
-//   'utils/globals',
-//   'themes/default';
-
-// import base partials
-// @import
-//   'base/core',
-//   'base/fonts';
-
-// @import
-//   'layout/slides';
-
-// import modules
-// @import
-//   'modules/buttons',
-//   'modules/forms';
-
-
+@import 'partials/fonts';
+@import 'partials/core'; // e.g. html, h1
+@import 'partials/buttons';
+@import 'partials/sections'; // e.g. <section>s
+@import 'partials/components'; // e.g. .card
