--- a/assets/scss/partials/_variables.scss
+++ b/assets/scss/partials/_variables.scss
@@ -10,6 +10,7 @@ $col--black: rgba(0, 0, 0, 1);
 $col--dark-grey: rgba(80,80,80,1);
 $col--light-grey: rgba(200,200,200,1);
 $col--very-light-grey: #f4f4f4;
+$col--white: rgba(255,255,255,1);
 
 $font-weight--bold: 700;
 $font-weight--normal: 400;
