--- a/assets/scss/partials/_sections.scss
+++ b/assets/scss/partials/_sections.scss
@@ -4,8 +4,21 @@ header, section, footer {
   width: 100%;
 }
 
-.titlebox {
-  @include center-content;
+header .container {
+  margin: 0;
+  width: 100%;
+  position: relative;
+  text-align: center;
+  padding-bottom: 50px;
+  @include black-bg-gradient(0.2, 0.8);
+
+  p {
+    color: $col--light-grey;
+    font-size: 1.3em;
+    text-align: center;
+    margin-top: 40px;
+    margin-bottom: 40px;
+  }
 }
 
 .mabel-logo {
@@ -14,15 +27,21 @@ header, section, footer {
   border: 2px solid $col--black;
   border-radius: 50%;
   text-align: center;
-  display: table-cell;
   vertical-align: middle;
   margin: auto;
+  margin-top: 50px;
 
   h1 {
     margin: 0;
     font-size: 4em;
     color: $col--black;
     text-shadow: 2px 2px 0px $col--mabel-orange;
+
+    &::after {
+      content: "";
+      line-height: 225px;
+      height: 225px;
+    }
   }
 }
 
